--- a/scss/_modules.scss
+++ b/scss/_modules.scss
@@ -17,6 +17,14 @@
     }
 }
 
+.our-client{
+	// height: 200px;
+	padding: 50px 0;
+	i {
+		font-size: 50px
+	}
+}
+
 .section-1 {
 	h2{
 		color: #000;
